[gd_scene load_steps=14 format=3 uid="uid://bbqop3cv54bun"]

[ext_resource type="Texture2D" uid="uid://cvi8jgfqd2t1g" path="res://ui/images/arrow-narrow-left-semi.png" id="1_1k0g6"]
[ext_resource type="Script" path="res://ui/in_game_ui/pause_pages.gd" id="1_2acap"]
[ext_resource type="PackedScene" uid="uid://bwo1cyocj4ab7" path="res://ui/in_game_ui/transition_to_fade.tscn" id="2_84qq4"]
[ext_resource type="Texture2D" uid="uid://ceyc1t8u2u4q" path="res://ui/images/arrow-narrow-left-inverted.png" id="2_n6grq"]
[ext_resource type="PackedScene" uid="uid://b14alqdoiya2q" path="res://ui/in_game_ui/transition_to_left.tscn" id="2_xqnn2"]
[ext_resource type="Texture2D" uid="uid://bt1ebn58tciix" path="res://ui/images/arrow-narrow-left.png" id="3_r1hav"]
[ext_resource type="PackedScene" uid="uid://cp32a3gvjfqle" path="res://ui/in_game_ui/transition_to_right.tscn" id="3_vo5km"]
[ext_resource type="Texture2D" uid="uid://t1lpnsn3dg6x" path="res://ui/images/arrow-narrow-right-semi.png" id="4_571ib"]
[ext_resource type="Texture2D" uid="uid://chpo2nrftmbnq" path="res://ui/images/arrow-narrow-right-inverted.png" id="5_qmox1"]
[ext_resource type="Texture2D" uid="uid://bb24gg8owkrvw" path="res://ui/images/arrow-narrow-right.png" id="6_rcrox"]
[ext_resource type="Script" path="res://ui/scripts/focus_first.gd" id="7_2nluw"]
[ext_resource type="Theme" uid="uid://d1tl4ouhddgg7" path="res://ui/themes/base_theme.tres" id="8_30mqh"]
[ext_resource type="PackedScene" uid="uid://dlym47ojq04o7" path="res://ui/audio/ui_audio_effects_attacher.tscn" id="10_1um31"]

[node name="PausedPages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2acap")
pages = Array[NodePath]([NodePath("Pages/PauseMenu"), NodePath("Pages/Settings"), NodePath("Pages/Controls")])
transition_to_fade = ExtResource("2_84qq4")
transition_to_left = ExtResource("2_xqnn2")
transition_to_right = ExtResource("3_vo5km")

[node name="Pages" type="Node" parent="."]

[node name="PauseMenu" type="Control" parent="Pages"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundBlocker" type="ColorRect" parent="Pages/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Pages/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/PauseMenu/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResumeButton" type="Button" parent="Pages/PauseMenu/HBoxContainer/VBoxContainer" groups=["UIButtons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("8_30mqh")
text = "Resume Game"

[node name="MainMenuButton" type="Button" parent="Pages/PauseMenu/HBoxContainer/VBoxContainer" groups=["UIButtons"]]
layout_mode = 2
theme = ExtResource("8_30mqh")
text = "Return to Menu"

[node name="QuitButton" type="Button" parent="Pages/PauseMenu/HBoxContainer/VBoxContainer" groups=["UIButtons"]]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
theme = ExtResource("8_30mqh")
text = "Quit Game"

[node name="FocusFirst" type="Node" parent="Pages/PauseMenu" node_paths=PackedStringArray("controls_in_sequence")]
script = ExtResource("7_2nluw")
controls_in_sequence = [null, null, null]

[node name="Settings" type="Control" parent="Pages"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundBlocker" type="ColorRect" parent="Pages/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Pages/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Pages/Settings/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="HeadingContainer" type="CenterContainer" parent="Pages/Settings/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HeadingLabel" type="RichTextLabel" parent="Pages/Settings/HBoxContainer/VBoxContainer2/HeadingContainer"]
layout_mode = 2
theme = ExtResource("8_30mqh")
theme_type_variation = &"HeadingLabel"
bbcode_enabled = true
text = "[center]Settings"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Settings/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="HFlowContainer" type="HBoxContainer" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme = ExtResource("8_30mqh")
text = "Background Music"

[node name="MusicSlider" type="HSlider" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0

[node name="HFlowContainer2" type="HBoxContainer" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer/HFlowContainer2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme = ExtResource("8_30mqh")
text = "Sound Effects"

[node name="SoundSlider" type="HSlider" parent="Pages/Settings/HBoxContainer/VBoxContainer2/VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="FocusFirst" type="Node" parent="Pages/Settings" node_paths=PackedStringArray("controls_in_sequence")]
script = ExtResource("7_2nluw")
controls_in_sequence = [null, null]

[node name="Controls" type="Control" parent="Pages"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundBlocker" type="ColorRect" parent="Pages/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Pages/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Pages/Controls/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="HeadingContainer" type="CenterContainer" parent="Pages/Controls/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HeadingLabel" type="RichTextLabel" parent="Pages/Controls/HBoxContainer/VBoxContainer2/HeadingContainer"]
layout_mode = 2
theme = ExtResource("8_30mqh")
theme_type_variation = &"HeadingLabel"
bbcode_enabled = true
text = "[center]Controls"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Controls/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="FocusFirst" type="Node" parent="Pages/Controls"]
script = ExtResource("7_2nluw")

[node name="Transitions" type="Node" parent="."]
unique_name_in_owner = true

[node name="PageLeftButton" type="TextureButton" parent="." groups=["UIButtons"]]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 53.0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("1_1k0g6")
texture_pressed = ExtResource("2_n6grq")
texture_hover = ExtResource("3_r1hav")
stretch_mode = 5

[node name="PageRightButton" type="TextureButton" parent="." groups=["UIButtons"]]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("4_571ib")
texture_pressed = ExtResource("5_qmox1")
texture_hover = ExtResource("6_rcrox")
stretch_mode = 5

[node name="UIAudioEffectsAttacher" parent="." instance=ExtResource("10_1um31")]
root_path = NodePath("../Pages")

[connection signal="pressed" from="Pages/PauseMenu/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_resume_game"]
[connection signal="pressed" from="Pages/PauseMenu/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_return_to_entry_scene"]
[connection signal="pressed" from="Pages/PauseMenu/HBoxContainer/VBoxContainer/QuitButton" to="." method="_quit_game"]
[connection signal="pressed" from="PageLeftButton" to="." method="_navigate_to_left"]
[connection signal="pressed" from="PageRightButton" to="." method="_navigate_to_right"]
